<resources>
    <string name="app_name">Hiếu và những người bạn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_register">Đăng ký</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="loginanother">Đăng nhập bằng cách khác....</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="cart">"Giỏ hàng"</string>
    <string name="quantity">"Số lượng: "</string>
    <string name="cost">"Giảm giá: "</string>
    <string name="address">"Địa chỉ: "</string>
    <string name="phone">"Số điện thoại: "</string>
    <string name="name">"Họ tên: "</string>
    <string name="gender">"Giới tính: "</string>
    <string name="date">"Ngày sinh: "</string>
    <string name="thanhtoan">"Thanh Toán"</string>
    <string name="paymentmt">"Phương thức thanh toán: "</string>
    <string name="delivery">"Phí vận chuyển: "</string>
    <string name="totaloder">"Tổng số tiền "</string>
    <string name="curency">"đ"</string>
    <string name="changeprofile">Sửa hồ sơ</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">"Mật khẩu phải trên 5 ký tự"</string>
    <string name="login_failed">"Tài khoản có thể chưa tồn tài, hoặc mật khẩu đúng!. Vui lòng nhập lại"</string>
</resources>