<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/smoke"
    tools:context=".ActivityiTem.MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="48dp"
            android:text="@string/changeprofile"
            android:textSize="23dp"
            app:layout_constraintStart_toEndOf="@+id/imgback"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgsucces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/redp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imgperson"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:srcCompat="@tools:sample/avatars" />
    </TableRow>

    <TableRow
        android:id="@+id/nametable"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow7">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/name"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/nameuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="hiếu"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=">"
            android:textSize="20dp" />
    </TableRow>

    <TableRow
        android:id="@+id/nametable1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametable">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/date"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/dateuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="19/02/2005"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=">"
            android:textSize="20dp" />
    </TableRow>

    <TableRow
        android:id="@+id/nametable2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametable1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/gender"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/genderuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Nam"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=">"
            android:textSize="20dp" />
    </TableRow>

    <TableRow
        android:id="@+id/nametable3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametable2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/phone"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phoneuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="0987654321"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=">"
            android:textSize="20dp" />
    </TableRow>

    <TableRow
        android:id="@+id/nametable4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametable3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/prompt_email"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/emailuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Nam"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=">"
            android:textSize="20dp" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>